# Donation-Back

./: Dockerfile  README.md  api_tester.py  db.sqlite3  docker-compose.yml  heroku.yml  manage.py  pyproject.toml  requirements.txt
Address/: admin.py  models.py  serializer.py  urls.py  views.py
Address/migrations/: 0001_initial.py  0002_city_address.py
accounts/: admin.py  models.py  serializer.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_account_group.py  0002_alter_customuser_phone_number.py  0002_doner_blood_type_patient_blood_type_and_more.py  0002_remove_customuser_address.py  0003_account_donate_account_location_alter_account_age.py  0003_alter_customuser_image.py  0003_customuser_address.py  0003_remove_customuser_donate_alter_customuser_roles.py  0004_alter_customuser_image.py  0004_remove_account_age_remove_account_blood_type_and_more.py  0004_remove_customuser_age_customuser_date_of_birth.py  0005_account_age_account_blood_type_and_more.py  0005_customuser_roles.py  0005_remove_customuser_address.py  0006_alter_customuser_address_alter_doner_blood_type_and_more.py  0006_customuser_address.py  0006_remove_doner_blood_type_remove_patient_blood_type.py  0007_alter_customuser_address.py  0007_alter_customuser_email.py  0007_doner_blood_type_patient_blood_type.py  0008_alter_customuser_image.py  0008_merge_20220104_0244.py  (+2 more)
blood_donating/: admin.py  apps.py  models.py  models2.py  serializer.py  urls.py  views.py
hospital/: forms.py  models.py  serializers.py  urls.py  views.py
lifeshare/: .env  asgi.py  settings.py  urls.py  wsgi.py
(+11 files in other folders)
